--- a/html/home.html
+++ b/html/home.html
@@ -29,6 +29,7 @@
     </div>
     <section id="main1" hidden></section>
     <section id="main2" hidden></section>
+    <div id="notifications"></div>
     <div class="loader">
         <h3>Loading...</h3>
     </div>
