File re-shuffling

--- a/html/home.html
+++ b/html/home.html
@@ -33,5 +33,10 @@
     <div class="loader">
         <h3>Loading...</h3>
     </div>
-    <script src="/home/script.js"></script>
+    <script src="/home/scripts/constants.js"></script>
+    <script src="/home/scripts/permissions.js"></script>
+    <script src="/home/scripts/api.js"></script>
+    <script src="/home/scripts/notif.js"></script>
+    <script src="/home/scripts/handler.js"></script>
+    <script src="/home/scripts/main.js"></script>
 </html>
