Add change password and Dialogs

--- a/html/home.html
+++ b/html/home.html
@@ -30,13 +30,29 @@
     <section id="main1" hidden></section>
     <section id="main2" hidden></section>
     <div id="notifications"></div>
+    <div id="dialogs">
+        <div class="dialog input" hidden>
+            <i class='material-icons'>close</i>
+            <h3></h3>
+            <p></p>
+            <input type="text">
+            <button></button>
+        </div>
+        <div class="overlay" hidden></div>
+    </div>
     <div class="loader">
         <h3>Loading...</h3>
     </div>
+
+    
     <script src="/home/scripts/constants.js"></script>
     <script src="/home/scripts/permissions.js"></script>
-    <script src="/home/scripts/api.js"></script>
+
     <script src="/home/scripts/notif.js"></script>
+    <script src="/home/scripts/dialog.js"></script>
+
+    <script src="/home/scripts/api.js"></script>
     <script src="/home/scripts/handler.js"></script>
+
     <script src="/home/scripts/main.js"></script>
 </html>
