Redirect account page

--- a/html/home.html
+++ b/html/home.html
@@ -21,7 +21,7 @@
             <a class="link" href="/users" onclick="return Handler.ago(this.href);">Users</a>
             <a class="link user" href="/account" onclick="return Handler.ago(this.href);"></a>
             <div class="usermenu">
-                <a class="link" href="/account" onclick="return Handler.ago(this.href);">Account</a>
+                <a class="link account" href="/account" onclick="return Handler.ago(this.href);">Account</a>
                 <a class="link" href="/admin" onclick="return Handler.ago(this.href);">Admin</a>
                 <a class="link" onclick="localStorage.removeItem('token'); location.assign('/auth/login');">Logout</a>
             </div>
