Add basic resource endpoints & pages

--- a/html/home.html
+++ b/html/home.html
@@ -35,7 +35,7 @@
             <i class='material-icons'>close</i>
             <h3></h3>
             <p></p>
-            <input type="text">
+            <div class="other"></div>
             <button></button>
         </div>
         <div class="overlay" hidden></div>
